He completado 100% el Taller2

--- a/Taller2/roles/apache2/templates/index.j2
+++ b/Taller2/roles/apache2/templates/index.j2
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-   <h1>Gathering Facts</h1>
+   <h1>Gathering Facts Taller 2</h1>
   <p>Este ordenador se llama: {{ ansible_hostname }}</p>
   <p>SO: {{ansible_distribution}} {{ansible_distribution_release}} </p>
   <h1>Variables declaradas por el usuario a nivel de grupo</h1>
